added working code

--- a/Writeup.Rmd
+++ b/Writeup.Rmd
@@ -37,6 +37,9 @@ raw <- read.csv("pml-training.csv", na.strings = c("NA",""), stringsAsFactors = 
 cleanupData = function(raw){
   # remove unrelated fields from model
   cleaned <- subset(raw, select = -c(X, user_name, raw_timestamp_part_1, raw_timestamp_part_2, cvtd_timestamp, new_window, num_window))
+  # there are a lot of columns with missing data, throm them up
+  naThreshold = as.integer(nrow(raw) * 0.5)
+  cleaned <- subset(cleaned, select = -which(colSums(is.na(cleaned)) > naThreshold))
   cleaned
 }
 
