--- a/Writeup.Rmd
+++ b/Writeup.Rmd
@@ -29,7 +29,7 @@ if (!file.exists("pml-training.csv")){
   download.file("https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv", destfile = "pml-training.csv", method="curl")  
 }
 
-# remove na and empty values from dataset
+# remove N/A's and empty values from dataset
 raw <- read.csv("pml-training.csv", na.strings = c("NA",""), stringsAsFactors = FALSE)
 ```
 
@@ -50,7 +50,7 @@ data = cleanupData(raw)
 Prediction
 ------------------------------
 
-Let us split train and test crossvalidation set in typical proportion, let us say, in 70%/30%.
+Let us split train and test crossvalidation sets in typical proportion, let us say, in 70%/30%.
 ```{r}
 data$classe <- as.factor(data$classe)
 testIndex = createDataPartition(data$classe, p = 0.7, list=FALSE)
