--- a/Writeup.Rmd
+++ b/Writeup.Rmd
@@ -59,7 +59,7 @@ test = data[testIndex,]
 
 ```
 
-Based on the paper's rocommendations, we are going to use random forest classification algorithm.
+For best accurancy without requirement of good interpretaion the best choice will be random forests algorithm (look for code.R for details).
 ```{r}
 predictor <- randomForest(classe ~ ., data = train)
 ```
